# icpc

./: .gitignore  CMakeLists.txt  README.md  run_c++.sh  run_python.sh  template.py
2023/: diff.bat  run.bat
2023/1/: 1.in  main.py
2023/1-comp/: 1.ans
2023/10/: 1.ans  1.in  main-comp.py  main.py
2023/11/: 1.in  2.ans  2.in  main.cpp  main.py  simulation.cpp
2023/2/: 1.ans  1.in  main.py
2023/3/: 3.in  main.cpp
2023/4/: 1.ans  1.in  main.py
2023/5/: 1.in  main.py
2023/6/: 1.in  2.ans  2.in  3.ans  3.in  main.py  sim.py
2023/7/: 2.ans  2.in  main.py
2023/7-comp/: 1.ans
2023/8/: 1.ans  main.py
2023/8-comp/: 1.in
2023/9/: 1.in  main  main.cpp  main.py
2024/1-comp/: 1.in  2.in  main.py
2024/10-comp/: 1.in  2.ans  2.in  main.py
2024/11-comp/: main.py
2024/12/: 1.ans  1.in  ai.cpp  generate.py  main-comp.py
2024/2/: main.py
2024/3/: ai.cpp  generate.py  main-comp.py
2024/4/: 1.ans  generate.py  main-comp.py  main.cpp  main.py
2024/5/: 1.in  2.in  main.py
2024/6/: 4.ans  4.in  ai.cpp  main-comp.py
2024/7/: 1.ans  1.in  2.ans  2.in  main.py
2024/8/: 1.in  2.in  3.ans  3.in  main.py
2024/9/: 2.in  3.in  4.in  5.in  6.in  chris.py  generate.py  main.cpp  main.py  to-slow.py
goldstein/Mixtures/: 2.in  3.in  main.py
goldstein/Party/: 1.in  main.py
goldstein/Pond Scum/: 1.ans  2.ans  main.py
goldstein/Racing Gems/: 1.ans  1.in  2.ans  2.in  main.py
online judge/big chocolate 10970/: main.cpp
online judge/brick wall patterns 900/: main.py
online judge/die 10409/: main.py
online judge/party games 1610/: 3.in  main.py
(+11 files in other folders)
